--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -13,10 +13,47 @@ jobs:
         with:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
-          password: ${{ secrets.PASSWORD }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
           script: |
-            cd server-tictactoe
-            echo "${{ secrets.PASSWORD }}" | sudo -S git pull https://${{ secrets.GIT_TOKEN }}@github.com/Tedydev-web/server-tictactoe.git master
-            echo "${{ secrets.PASSWORD }}" | sudo -S npm run build
-            pm2 restart 1
+            echo "🚀 Deploying FPTedu-tic-tac-toe..."
+            # Đi tới thư mục dự án
+            cd server-tictactoe || { echo "❌ Directory server-tictactoe not found"; exit 1; }
+            # Cài đặt Node.js v18 nếu chưa có
+            if ! command -v nvm &> /dev/null; then
+              curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
+              source ~/.bashrc
+            fi
+            nvm install 18
+            nvm use 18
+            # Bắt buộc nhận code mới
+            git fetch origin master || { echo "❌ Failed to fetch code"; exit 1; }
+            git reset --hard origin/master || { echo "❌ Failed to reset code"; exit 1; }
+            # Sao chép .env.example thành .env nếu cần
+            if [ ! -f .env ] && [ -f .env.example ]; then
+              cp .env.example .env
+              echo "✅ Copied .env.example to .env"
+            elif [ ! -f .env.example ]; then
+              echo "❌ .env.example does not exist"
+              exit 1
+            else
+              echo "✅ .env already exists, skipping copy"
+            fi
+            # Ghi các biến môi trường từ GitHub Secrets vào .env
+            echo "PORT=3000" >> .env
+            echo "ACCESS_TOKEN_SECRET=${{ secrets.ACCESS_TOKEN_SECRET }}" >> .env
+            echo "REFRESH_TOKEN_SECRET=${{ secrets.REFRESH_TOKEN_SECRET }}" >> .env
+            echo "REFRESH_TOKEN_EXPIRES_IN=7d" >> .env
+            # Cài đặt PM2 nếu chưa có
+            if ! command -v pm2 &> /dev/null; then
+              npm install -g pm2
+            fi
+            # Xóa node_modules và cài lại
+            rm -rf node_modules package-lock.json
+            npm install
+            npm install @nestjs/cli@latest
+            # Build ứng** Build ứng dụng
+            npm run build || { echo "❌ Build failed"; exit 1; }
+            # Khởi động lại ứng dụng
+            pm2 restart website || pm2 start --name website npm -- start
+            echo "✅ Deployment completed"
